# cis1-proto-utils

./: CMakeLists.txt  conanfile.py
include/: event_dispatcher.h  queue_interface.h  read_istream_kv_str.h  transaction.h
include/cis1_proto_utils/: cloexec.h  const_stream_adapter.h  event_dispatcher.h  param_codec.h  protocol_message.h  queue_interface.h  read_istream_kv_str.h  transaction.h
src/: cloexec.cpp  param_codec.cpp  read_istream_kv_str.cpp  transaction.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: param_codec.cpp  read_istream_kv_str.cpp
